Agregando contenido a terapias.html

--- a/css/assets/_agenda.scss
+++ b/css/assets/_agenda.scss
@@ -32,6 +32,7 @@
     
 
     .tituloagenda {
+        background-image: url(/images/contacto.jpeg);
         text-align: center;
         grid-area: titagen;
 
