Editando los textos lorems

--- a/css/assets/_terapias.scss
+++ b/css/assets/_terapias.scss
@@ -44,7 +44,9 @@
     }
 
     &_titulo {
+        background-image: url(/images/contacto.jpeg);
         h1 {
+            
             text-align: center;
             font-family: $fontInspiration;
             font-size: 100px;
